add library for basic setup of project

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hyperverge",
   "version": "1.0.0",
   "description": "Hyperverge Bus Ticket System",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/darshilchapadia/hyperverge/issues"
   },
-  "homepage": "https://github.com/darshilchapadia/hyperverge#readme"
+  "homepage": "https://github.com/darshilchapadia/hyperverge#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  }
 }
